--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ yarn-error.log*
 lerna-debug.log*
 
 .env
-now.json
+vercel.json
 node_modules/sendgrid.env
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
